--- a/platformio.ini
+++ b/platformio.ini
@@ -18,3 +18,5 @@ upload_flags =
     -c
     stk500v1
 upload_command = avrdude $UPLOAD_FLAGS -U flash:w:$SOURCE:i
+build_unflags = -std=gnu++11
+build_flags = -std=gnu++17
