Adding SPI peripheral

--- a/platformio.ini
+++ b/platformio.ini
@@ -2,7 +2,7 @@
 platform = atmelavr
 board = attiny85
 upload_protocol = custom
-board_build.f_cpu = 80000000L
+board_build.f_cpu = 8000000UL
 upload_port = COM9
 upload_speed = 19200
 upload_flags =
@@ -19,4 +19,4 @@ upload_flags =
     stk500v1
 upload_command = avrdude $UPLOAD_FLAGS -U flash:w:$SOURCE:i
 build_unflags = -std=gnu++11
-build_flags = -std=gnu++17
+build_flags =  -std=gnu++17
